--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,5 @@
 Phantom Release Arc:
-* Rewrite testfblc as fblc-test in top of fblc library.
-* Replace expect_result and expect_proc_result with fblc-test
+* Replace expect_result with fblc-test
 * Implement version of Checker that works on FblcProgram without symbols.
 * Cleanup Fblcs Interface
  - Rewrite resolve to pass a Symbol** instead of loc_id.
