--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 Fbld Kickoff:
-* Revise fbld modules specification.
 * Draft code for:
-  - UBNat: Sub, Mul, Div, Mod
+  - UBNat: Div, Mod
   - Primes: IsPrime, NthPrime
   - PrimesTest
 * Design and implement fbld (or fbld-test as makes sense)
