Switch to new approach for storing symbol info.
Rather than using a location id for every token in the program, use location
ids just for actions and expressions and structured information about the
tokens.

This adds an id field to FblcActn and FblcExpr to make it easy to look up
symbol information for actions and expressions. If the extra space is a
problem, the id field could be merged with, for example, the tag fields.

The code is much cleaner this way.

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,7 +12,10 @@ Ints:
   complete.
 
 Fblc Cleanup:
-* Implement version of Checker that works on FblcProgram without symbols.
+* Remove ActnCtx and ExprCtx from resolve. Just inline the args.
+* Change VectorExtend to VectorAppend undefined and return a pointer?
+  - because otherwise you have to remember to increment the size too.
+* Implement version of Checker that works on FblcProgram without fblcs.
 * General Cleanup
  - Verify all document comments are present and up to date.
  - Document allocations for every function that takes an FblcArena,
