--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,11 @@
 Fbld Kickoff:
-* Design and implement fbld (or fbld-test as makes sense)
+* Set up most basic fbld-test case in tcl.
+* Implement most basic version of fbld-test.
+ - parse needed mdecls and mdefns.
+ - check each mdefn against the mdecls it uses.
+ - collect needed definitions into an fblc program with proper resolution.
+ - execute via FblcExecute.
+* Add tests and features as needed until UBNatTest and PrimesTest both pass.
 
 Fblc Cleanup:
 * Implement version of Checker that works on FblcProgram without fblcs.
