Set up fbld-check program and initial tests.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@ Fbld Cleanup:
 * Better organize the contents parse.y.
 * Avoid duplicate calls to LookupDecl arising from compiling a type
   declaration and looking up the type declaration to return when compiling an
-  expression.
+  expression. Return type name instead of Decl?
 
 Fblc Front End Cleanup:
 * Make fblcs structure standalone rather than tied to fblc structure.
